<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yhussein.myapplication.ReadActivity"
    android:background="#fcfcfc"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        app:cardCornerRadius="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/planets_array"
                android:textColor="?attr/colorPrimary"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/son"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/close"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="?attr/colorAccent" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        app:cardCornerRadius="3dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:background="#2d2d2d"
            android:id="@+id/book_img_id_read"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        app:cardCornerRadius="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_skip_previous_black_24dp"
                android:text="PREVIOUS"
                android:textColor="?attr/colorPrimary" />

            <Button
                android:id="@+id/play"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_play_circle_outline_black_24dp"
                android:text="PLAY"
                android:textColor="?attr/colorPrimary" />

            <Button
                android:id="@+id/pause"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_pause_circle_outline_black_24dp"
                android:text="PAUSE"
                android:textColor="?attr/colorPrimary" />

            <Button
                android:id="@+id/next"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_skip_next_black_24dp"
                android:text="NEXT"
                android:textColor="?attr/colorPrimary" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </ScrollView>


</LinearLayout>
